# SteamServerADMIN

./: .gitignore  CMakeLists.txt  CMakePresets.json  CODEBASE_ANALYSIS.md  README.md  adhere.md  buildissues.txt  imgui.ini  latestlogs.txt  servers.json  ssa.txt
.github/workflows/: ci.yml  release.yml
_codeql_build_dir/: SSA  SSA_Tests
_codeql_build_dir/.qt/: QtDeploySupport.cmake
_codeql_build_dir/SSA_Tests_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
_codeql_build_dir/SSA_Tests_autogen/UVLADIE3JM/: moc_RconClient.cpp.d  moc_ServerManager.cpp.d  moc_SteamCmdModule.cpp.d
_codeql_build_dir/SSA_Tests_autogen/include/: test_serverconfig.moc.d
_codeql_build_dir/SSA_autogen/: deps  mocs_compilation.cpp
_codeql_build_dir/SSA_autogen/UVLADIE3JM/: moc_HomeDashboard.cpp.d  moc_MainWindow.cpp.d  moc_RconClient.cpp.d  moc_ServerManager.cpp.d  moc_ServerTabWidget.cpp.d  moc_SteamCmdModule.cpp.d
scripts/: build.ps1  build.sh
src/: BackupModule.cpp  BackupModule.hpp  ConfigBackupManager.cpp  ConfigBackupManager.hpp  ConfigFileDiscovery.hpp  ConsoleLogWriter.hpp  EventHookManager.cpp  EventHookManager.hpp  FileDialogHelper.hpp  GameTemplates.hpp  GracefulRestartManager.cpp  GracefulRestartManager.hpp  HomeDashboard.cpp  HomeDashboard.hpp  IniEditor.cpp  IniEditor.hpp  LogModule.cpp  LogModule.hpp  MainWindow.cpp  MainWindow.hpp  RconClient.cpp  RconClient.hpp  ResourceMonitor.cpp  ResourceMonitor.hpp  SchedulerModule.cpp  SchedulerModule.hpp  ServerConfig.hpp  ServerManager.cpp  ServerManager.hpp  ServerTabWidget.cpp  ServerTabWidget.hpp  SteamCmdModule.cpp  SteamCmdModule.hpp  SteamLibraryDetector.cpp  SteamLibraryDetector.hpp  SteamQueryClient.cpp  SteamQueryClient.hpp  TrayManager.cpp  TrayManager.hpp  UserRoleManager.cpp  (+4 more)
tests/: test_serverconfig.cpp
ui/: uiuximprovements.md
